home-page fixed flex-wrap

--- a/Task_2/styles/home-page-dark.scss
+++ b/Task_2/styles/home-page-dark.scss
@@ -25,6 +25,7 @@ body {
 
   @media (max-width: 767px) {
     padding-left: 10px;
+    padding-right: 10px;
   }
 }
 
@@ -262,9 +263,12 @@ body {
   &__header {
     display: flex;
     justify-content: space-between;
-    max-width: 1516px;
+    max-width: 78.96vw;
     margin-bottom: 30px;
     margin-right: 30px;
+    @media (max-width: 1400px) {
+      max-width: 70vw;
+    }
   }
 
   &__title {
@@ -299,8 +303,8 @@ body {
 
   &__list {
     display: flex;
-    // flex-wrap: wrap;
-    @media (max-width: 1919px) {
+
+    @media (max-width: 1060px) {
       flex-wrap: wrap;
     }
     @media (max-width: 767px) {
