--- a/Task_2/styles/home-page.scss
+++ b/Task_2/styles/home-page.scss
@@ -23,6 +23,7 @@ body {
 
   @media (max-width: 767px) {
     padding-left: 10px;
+    padding-right: 10px;
   }
 }
 
@@ -224,14 +225,15 @@ body {
 }
 
 .channel {
-  display: flex;
-  flex-direction: column;
   &__header {
     display: flex;
     justify-content: space-between;
-    max-width: 1516px;
+    max-width: 78.96vw;
     margin-bottom: 30px;
     margin-right: 30px;
+    @media (max-width: 1400px) {
+      max-width: 70vw;
+    }
   }
 
   &__title {
@@ -272,7 +274,7 @@ body {
   &__list {
     display: flex;
 
-    @media (max-width: 1919px) {
+    @media (max-width: 1060px) {
       flex-wrap: wrap;
     }
     @media (max-width: 767px) {
@@ -390,8 +392,11 @@ h3 {
   &__header {
     display: flex;
     justify-content: space-between;
-    max-width: 1516px;
+    max-width: 78.96vw;
     margin-right: 30px;
+    @media (max-width: 1400px) {
+      max-width: 70vw;
+    }
   }
 
   &__title {
